--- a/matthew-ia/src/styles/sass/react-components/Detail.scss
+++ b/matthew-ia/src/styles/sass/react-components/Detail.scss
@@ -101,7 +101,7 @@
 //** For the GALLERY section.
 #gallery {
   height: 100vh;
-  padding-top: 15vh;
+  padding-top: 19vh;
   width: 12000px;
   img {
     vertical-align: top;
