--- a/matthew-ia/src/styles/sass/react-components/project-detail/Spectra.scss
+++ b/matthew-ia/src/styles/sass/react-components/project-detail/Spectra.scss
@@ -7,7 +7,3 @@
 //== Style
 //
 //## A group of styles
-
-#gallery {
-  padding-top: 20vh;
-}
